solved : Code snippets header selection is not visible on Firefox #987

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -48,10 +48,10 @@ a {
 }
 
 ::selection { // Text Selection Colors
-    background: $green-very-light;
+    background: $green-medium;
 }
 ::-moz-selection {
-    background: $green-very-light;
+    background: $green-medium;
 }
 ol li, ul li { //list style
     margin-top: 10px;
